--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -50,9 +50,9 @@
                       aria-controls="accordion-example-code"
                       aria-expanded="false"
                     >
-                      <span class="me-2" data-feather="code"></span>Preview</a
+                      <span class="me-2" data-feather="eye"></span>Preview</a
                     ><a class="btn btn-sm btn-phoenix-primary preview-btn ms-2"
-                      ><span class="me-2" data-feather="eye"></span>Close</a
+                      ><span class="me-2" data-feather="minimize-2"></span>Close</a
                     >
                   </nav>
                 </div>
@@ -74,94 +74,12 @@
               </div>
 
               <div class="p-4">
-                <!-- file uploader -->
-
-                <!-- data-options are the setting for dropzone can find the settings also inside -->
-                <form
-                  class="dropzone dropzone-multiple p-0 mb-4"
-                  id="myDropzone1"
-                  data-dropzone="data-dropzone"
-                  action="/upload-patrol"
-                  data-options='{"url":"/upload-patrol","paramName": "file"}'
-                >
-                  <div class="dz-message" data-dz-message="data-dz-message">
-                    <img
-                      class="me-2"
-                      src="../../../assets/img/icons/cloud-upload.svg"
-                      width="25"
-                      alt=""
-                    />Drop your files here
-                  </div>
-                  <div
-                    class="dz-preview dz-preview-multiple m-0 d-flex flex-column"
-                  >
-                    <div class="d-flex mb-3 pb-3 border-bottom media">
-                      <div class="border border-300 p-2 rounded-2 me-2">
-                        <img
-                          class="rounded-2 dz-image"
-                          src="../../../assets/img/icons/file.png"
-                          alt="..."
-                          data-dz-thumbnail="data-dz-thumbnail"
-                        />
-                      </div>
-                      <div class="flex-1 d-flex flex-between-center">
-                        <div>
-                          <h6 data-dz-name="data-dz-name"></h6>
-                          <div class="d-flex align-items-center">
-                            <p
-                              class="mb-0 fs--1 text-400 lh-1"
-                              data-dz-size="data-dz-size"
-                            ></p>
-                            <div class="dz-progress">
-                              <span
-                                class="dz-upload"
-                                data-dz-uploadprogress=""
-                              ></span>
-                            </div>
-                          </div>
-                          <span
-                            class="fs--2 text-danger"
-                            data-dz-errormessage="data-dz-errormessage"
-                          ></span>
-                        </div>
-                        <div class="dropdown font-sans-serif">
-                          <button
-                            class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal dropdown-caret-none"
-                            type="button"
-                            data-bs-toggle="dropdown"
-                            aria-haspopup="true"
-                            aria-expanded="false"
-                          >
-                            <span class="fas fa-ellipsis-h"></span>
-                          </button>
-                          <div
-                            class="dropdown-menu dropdown-menu-end border py-2"
-                          >
-                            <a
-                              class="dropdown-item"
-                              href="#!"
-                              data-dz-remove="data-dz-remove"
-                              >Remove File</a
-                            >
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <input
-                    type="text"
-                    style="display: none"
-                    value="<%= reportId %>"
-                    name="fileReportId"
-                  />
-                </form>
-
                 <!-- form >form tag will be merge with file uploader form tag -->
                 <form
                   action="/patrol-report/submit"
                   method="post"
                   class="row g-3 has-validation"
-                  id="patrolReportForm"
+                  id="reportForm"
                 >
                   <!-- form title report -->
                   <div class="col-md-4">
@@ -297,7 +215,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 gy-4">
+                  <div class="col-12 gy-4 mb-3">
                     <label class="form-label" for="floatingProjectDescription2"
                       >Notes</label
                     >
@@ -316,7 +234,7 @@
                     </div>
                   </div>
 
-                   <input
+                  <input
                     type="text"
                     style="display: none"
                     value="<%= reportId %>"
@@ -325,13 +243,16 @@
 
                   <!-- Submit button -->
                   <div class="col-12">
-                    <button
-                      id="uploadButtonPatrol"
-                      class="btn btn-primary"
-                      type="submit"
-                    >
+                    <button class="btn btn-primary" type="submit">
                       Submit form
                     </button>
+                    <a
+                      role="button"
+                      class="btn btn-phoenix-primary bg-transparent border border-0 mx-2"
+                      data-bs-toggle="modal"
+                      data-bs-target="#verticallyCentered"
+                      >Add files +</a
+                    >
                   </div>
                 </form>
               </div>
@@ -383,6 +304,7 @@
     </div>
   </div>
 
+  <!-- alert toast -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
     <div class="d-flex">
       <div
@@ -407,6 +329,121 @@
             <span class="uil uil-times fs-1"></span>
           </button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- modal for upload files -->
+<div
+  class="modal fade scrollbar-overlay"
+  id="verticallyCentered"
+  tabindex="-1"
+  aria-labelledby="verticallyCenteredModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content">
+      <div class="modal-header border border-0">
+        <h5 class="modal-title" id="verticallyCenteredModalLabel">
+          Upload Files
+        </h5>
+        <button
+          class="btn p-1"
+          type="button"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          <span class="fas fa-times fs--1"></span>
+        </button>
+      </div>
+
+      <div class="modal-body p-5">
+        <!-- file uploader -->
+        <!-- data-options are the setting for dropzone can find the settings also inside -->
+        <form
+          class="dropzone dropzone-multiple p-0 mb-4"
+          id="myDropzone1"
+          data-dropzone="data-dropzone"
+          action="/upload-patrol"
+          data-options='{"url":"/upload-patrol","paramName": "file"}'
+        >
+          <div class="dz-message" data-dz-message="data-dz-message">
+            <img
+              class="me-2"
+              src="../../../assets/img/icons/cloud-upload.svg"
+              width="25"
+              alt=""
+            />Drop your files here
+          </div>
+          <div class="dz-preview dz-preview-multiple m-0 d-flex flex-column">
+            <div class="d-flex mb-3 pb-3 border-bottom media">
+              <div class="border border-300 p-2 rounded-2 me-2">
+                <img
+                  class="rounded-2 dz-image"
+                  src="../../../assets/img/icons/file.png"
+                  alt="..."
+                  data-dz-thumbnail="data-dz-thumbnail"
+                />
+              </div>
+              <div class="flex-1 d-flex flex-between-center">
+                <div>
+                  <h6 data-dz-name="data-dz-name"></h6>
+                  <div class="d-flex align-items-center">
+                    <p
+                      class="mb-0 fs--1 text-400 lh-1"
+                      data-dz-size="data-dz-size"
+                    ></p>
+                    <div class="dz-progress">
+                      <span class="dz-upload" data-dz-uploadprogress=""></span>
+                    </div>
+                  </div>
+                  <span
+                    class="fs--2 text-danger"
+                    data-dz-errormessage="data-dz-errormessage"
+                  ></span>
+                </div>
+                <div class="dropdown font-sans-serif">
+                  <button
+                    class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal dropdown-caret-none"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    <span class="fas fa-ellipsis-h"></span>
+                  </button>
+                  <div class="dropdown-menu dropdown-menu-end border py-2">
+                    <a
+                      class="dropdown-item"
+                      href="#!"
+                      data-dz-remove="data-dz-remove"
+                      >Remove File</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <input
+            type="text"
+            style="display: none"
+            value="<%= reportId %>"
+            name="fileReportId"
+          />
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" type="submit" id="uploadButtonPatrol">
+          <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
+        </button>
+        <button
+          class="btn btn-outline-primary"
+          type="button"
+          data-bs-dismiss="modal"
+        >
+          Cancel
+        </button>
       </div>
     </div>
   </div>
